# jirade

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-build  docker-run  pyproject.toml
.claude/commands/: groom.md
configs/: acme-data.yaml  example.yaml
docs/: HOW_IT_WORKS.md  SEARCH_TOOLS.md
jira_agent/: agent.py  config.py  main.py
jira_agent/auth/: __init__.py  github_auth.py  jira_auth.py  manager.py  oauth_server.py  token_store.py
jira_agent/clients/: github_client.py  jira_client.py
jira_agent/learning/: capture.py  publisher.py  storage.py
jira_agent/repo_config/: loader.py  schema.py
jira_agent/tools/: dbt_tools.py  git_tools.py
jira_agent/triggers/: server.py
jira_agent/utils/: logger.py  progress.py
jirade/: agent.py  config.py  main.py
jirade/auth/: jira_auth.py  manager.py
jirade/clients/: confluence_client.py  databricks_client.py  dbt_cloud_client.py  github_client.py  jira_client.py
jirade/mcp/: __init__.py  server.py  tools.py
jirade/mcp/handlers/: __init__.py  activity_report.py  airflow_test.py  confluence.py  dbt_cloud.py  dbt_diff.py  github.py  jira.py  uat_report.py
jirade/repl/: __init__.py  agent.py  session.py  tools.py
jirade/repo_config/: schema.py
jirade/tools/: git_tools.py
jirade/triggers/: server.py
jirade/utils/: logger.py
jirade/zoom_bot/: __init__.py  agent.py  config.py  recall_client.py  server.py  transcript_handler.py  tts.py  tunnel.py
knowledge/: README.md
knowledge/code-patterns/: search-patterns.md
tests/: conftest.py  test_agent_grooming.py  test_changed_column_attribution.py  test_dbt_tools.py  test_git_tools.py  test_metric_view_smoke.py  test_repo_config.py  test_uat_report.py  test_zoom_bot.py
